--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,7 @@ if (flutterVersionName == null) {
 }
 
 android {
+    namespace 'com.suvojeet.qrbridge_app'
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
