--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   permission_handler: ^11.0.1
   lottie: ^2.7.0
   provider: ^6.1.1
+  archive: ^3.4.9
+  image: ^4.1.3
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
